...
// final formatNumber = NumberFormat("0.####");
// final formatNumber = NumberFormat("0.##");
final formatCompactNumber = NumberFormat.compact();

class Constants {
  // App constants
  static const String appTitle = 'RealizeAlpha';

  // Trade Signal Strength Thresholds
  static const int signalStrengthStrongMin = 75;
  static const int signalStrengthModerateMin = 50;
  static const int signalStrengthModerateMax = 74;
  static const int signalStrengthWeakMax = 49;
...
