...
                            const SizedBox(width: 12),
                            Expanded(
                              child: Column(
                                crossAxisAlignment: CrossAxisAlignment.start,
                                children: [
                                  Text(
                                    'Stocks Auto-Trading', //Agentic Trading
                                    style:
                                        theme.textTheme.titleMedium?.copyWith(
                                      fontWeight: FontWeight.bold,
                                      color: disabled
                                          ? colorScheme.onSurface
                                              .withValues(alpha: 0.5)
...
