...
          NavigationDestination(
            icon: Icon(Icons.account_balance), //home
            label: 'Portfolio',
          ),
          NavigationDestination(
            icon: Icon(Icons.history),
            label: 'History',
          ),
          NavigationDestination(
            icon: Icon(Icons.search),
            label: 'Search',
          ),
          NavigationDestination(
            icon: Icon(Icons.insights),
            label: 'Signals', // Trade Signals
          ),
          NavigationDestination(
...
  //                         ],
  //                       ])
  //                     ],
  //             ),
  //           ),
  //           // ListTile(
  //           //   title: Text('RealizeAlpha'),
  //           //   trailing: Text('v${packageInfo.toString()}'),
  //           // )
  //           if (packageInfo != null) ...[
  //             // const Divider(
  //             //   height: 10,
  //             // ),
...
