...
  final double? adjustedPortfolioEquityPreviousClose;
  final double? withdrawableAmount;
  final double? unwithdrawableDeposits;
  final double? unwithdrawableGrants;
  final DateTime? updatedAt;

  Portfolio(
      this.url,
      this.account,
      this.startDate,
      this.marketValue,
      this.equity,
      this.extendedHoursMarketValue,
...
