...

  @override
  void initState() {
    super.initState();

    searchCtl = TextEditingController();
    widget.analytics.logScreenView(screenName: 'Search');
  }

  @override
  void didUpdateWidget(SearchWidget oldWidget) {
    super.didUpdateWidget(oldWidget);
    if (widget.brokerageUser != oldWidget.brokerageUser) {
...
                          itemBuilder: (context, index) {
                            if (index == 0) {
                              return Padding(
                                padding: const EdgeInsets.only(right: 8.0),
                                child: ActionChip(
                                  avatar: const Icon(Icons.list),
                                  label: const Text('All Lists'),
                                  onPressed: () {
                                    Navigator.push(
                                      context,
                                      MaterialPageRoute(
                                        builder: (context) => ListsWidget(
                                          widget.brokerageUser!,
...
